fixed scrollbar and mobile size of video feed

--- a/static/scripts/youtubeTV/ytv.css
+++ b/static/scripts/youtubeTV/ytv.css
@@ -9,11 +9,10 @@
 	font-family: arial, sans-serif;
 }
 .ytv-canvas ::-webkit-scrollbar{
-	border-left: 1px solid #000;
-	width: 10px;
+	width: 7px;
 }
 .ytv-canvas ::-webkit-scrollbar-thumb{
-	background: rgba(255,255,255,0.1);
+	background: rgba(0,0,0,0.1);
 }
 
 /* Video */
